upload hw-12 on js#3

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -185,3 +185,7 @@ main .gallery-btn.shown {
     transform: rotate(360deg);
   }
 }
+
+.iziToast-icon .ico-info .revealIn {
+  color: #fff !important;
+}
